Changes: - Finished item and supplier validation - Added error partial - Added unique constraint migration for codeitem

--- a/views/items/add.ejs
+++ b/views/items/add.ejs
@@ -9,6 +9,7 @@
 
     <% include ../partials/navigation %>
     <h1>Add an Item</h1>
+    <% include ../partials/errors %>
     <form action="/items/add" method="post">
       <div class="form-group">
         <label for="name">Name</label>
