--- a/views/suppliers/add.ejs
+++ b/views/suppliers/add.ejs
@@ -9,6 +9,7 @@
 
     <% include ../partials/navigation %>
     <h1>Add a Supplier</h1>
+    <% include ../partials/errors %>
     <form action="/suppliers/add" method="post">
       <div class="form-group">
         <label for="name">Name</label>
