Added formatUang helper

--- a/views/suppliers/index.ejs
+++ b/views/suppliers/index.ejs
@@ -34,7 +34,7 @@
                 <% if (supplier.Items.length) { %>
                     <ul>
                       <% supplier.Items.forEach((item) => { %>
-                          <li><%= item.name %> @ <%= item.SupplierItem.price %></li>
+                          <li><%= item.name %> @ <%= item.SupplierItem.getPrice() %></li>
                       <% }) %>
                     </ul>
                 <% } else { %>
