Finished 'add item' feature on Supplier

--- a/views/suppliers/index.ejs
+++ b/views/suppliers/index.ejs
@@ -42,6 +42,7 @@
                 <% } %>
               </td>
               <td>
+                <a href="/suppliers/<%= supplier.id %>/additem" class="btn btn-success">Assign Item</a>
                 <a href="/suppliers/edit/<%= supplier.id %>" class="btn btn-primary">Edit</a>
                 <a href="/suppliers/delete/<%= supplier.id %>" class="btn btn-danger">Delete</a>
               </td>
