--- a/views/items/index.ejs
+++ b/views/items/index.ejs
@@ -19,6 +19,7 @@
           <th>Name</th>
           <th>Brand</th>
           <th>Code Item</th>
+          <th>List Supplier</th>
           <th>Actions</th>
         </tr>
       </thead>
@@ -31,6 +32,17 @@
               <td><%= item.name %></td>
               <td><%= item.brand %></td>
               <td><%= item.codeitem %></td>
+              <td>
+                <% if (item.Suppliers.length) { %>
+                    <ul>
+                      <% item.Suppliers.forEach((supplier) => { %>
+                          <li><%= supplier.name %> @ <%= supplier.SupplierItem.getPrice() %></li>
+                      <% }) %>
+                    </ul>
+                <% } else { %>
+                    No supplier yet
+                <% } %>
+              </td>
               <td>
                 <a href="/items/edit/<%= item.id %>" class="btn btn-primary">Edit</a>
                 <a href="/items/delete/<%= item.id %>" class="btn btn-danger">Delete</a>
