--- a/views/supplier-add.ejs
+++ b/views/supplier-add.ejs
@@ -11,8 +11,10 @@
         <form action="/suppliers/add" method="post">
             Nama :
             <input name="name"/> <br>
+            <br>
+            Kota
             <input name="kota"/> <br>
-
+            <br>
             <input type="submit" value="Save">      
         </form>
 
