--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <html>
     <body>
         <a href='/suppliers'>Suppliers</a>
-        <a href='/item'>Suppliers</a>
+        <a href='/item'>Items</a>
+        <a href='/item/search'>Search</a>
     </body>
 </html>
