--- a/views/supplier.ejs
+++ b/views/supplier.ejs
@@ -12,6 +12,12 @@
                     <td><%=d.id%></td>
                     <td><%=d.name%></td>
                     <td><%=d.kota%></td>
+                    <td>
+                        <%d.Items.forEach(x => {%>
+                            <%=x.name%> @ <%=x.SupplierItem.dataValues.price%><br>
+                        <%})%>
+                    </td>
+                    <td><a href='/suppliers/assign/<%=d.id%>'>Assign</a></td>
                     <td><a href='/suppliers/edit/<%=d.id%>'>Edit</a></td>
                     <td><a href='/suppliers/delete/<%=d.id%>'>Delete</a></td>
                 </tr>
