--- a/views/item/list.ejs
+++ b/views/item/list.ejs
@@ -12,8 +12,8 @@
 
 
 	<div class="container">
-	  <h2>Suppliers</h2>  
-	  <h4><a class="pull-right" href="/suppliers/add">Add</a></h4>      
+	  <h2>Items</h2>  
+	  <h4><a class="pull-right" href="/items/add">Add</a></h4>      
 	  <table class="table table-striped">
 	    <thead>
 	      <tr>
