--- a/views/items/add.ejs
+++ b/views/items/add.ejs
@@ -7,17 +7,19 @@
   </head>
   <body>
   	<a href="/">Home </a><a href="/suppliers">Suppliers </a><a href="/items">Items </a>
-    <h1>Add Supplier</h1>    
-    <form action="/suppliers/add" method="POST">
+    <h1>Add Item</h1>    
+    <form action="/items/add" method="POST">
 	  Name:<br>
 	  <input type="text" name="name">
 	  <br>
-	  Kota:<br>
-	  <input type="text" name="kota">
+	  Brand:<br>
+	  <input type="text" name="brand">
+	  <br>
+	  Code Item:<br>
+	  <input type="text" name="codeItem">
 	  <br><br>
 	  <input type="submit" value="Submit">
 	</form> 
-	  
 	</table> 
   </body>
 </html>
