--- a/views/suppliers/index.ejs
+++ b/views/suppliers/index.ejs
@@ -8,7 +8,7 @@
   <body>
   	<a href="/">Home </a><a href="/suppliers">Suppliers </a><a href="/items">Items </a>
     <h1>Halaman Suppliers</h1>
-    <h4><a href="/suppliers/add">Add Suppliers</a></h4>
+    <h4><a href="/suppliers/add">Add Supplier</a></h4>
      <table border="1px">
 	  <tr>
 	  	<th>ID</th>
