--- a/views/items/edit.ejs
+++ b/views/items/edit.ejs
@@ -7,17 +7,19 @@
   </head>
   <body>
   	<a href="/">Home </a><a href="/suppliers">Suppliers </a><a href="/items">Items </a>
-    <h1>Add Supplier</h1>    
-    <form action="/suppliers/add" method="POST">
+    <h1>Edit Item</h1>    
+    <form action="/items/edit/<%= rows.id %>" method="POST">
 	  Name:<br>
-	  <input type="text" name="name">
+	  <input type="text" name="name" value="<%= rows.name %>">
 	  <br>
-	  Kota:<br>
-	  <input type="text" name="kota">
+	  Brand:<br>
+	  <input type="text" name="brand" value="<%= rows.brand %>">
+	  <br>
+	  Code Item:<br>
+	  <input type="text" name="codeItem" value="<%= rows.codeItem %>">
 	  <br><br>
 	  <input type="submit" value="Submit">
 	</form> 
-	  
 	</table> 
   </body>
 </html>
