--- a/views/suppliers/edit.ejs
+++ b/views/suppliers/edit.ejs
@@ -7,13 +7,13 @@
   </head>
   <body>
   	<a href="/">Home </a><a href="/suppliers">Suppliers </a><a href="/items">Items </a>
-    <h1>Add Supplier</h1>    
-    <form action="/suppliers/add" method="POST">
+    <h1>Edit Supplier</h1>    
+    <form action="/suppliers/edit/<%= rows.id %>" method="POST">
 	  Name:<br>
-	  <input type="text" name="name">
+	  <input type="text" name="name" value="<%= rows.name %>">
 	  <br>
 	  Kota:<br>
-	  <input type="text" name="kota">
+	  <input type="text" name="kota" value="<%= rows.kota %>">
 	  <br><br>
 	  <input type="submit" value="Submit">
 	</form> 
