--- a/views/suppliers.ejs
+++ b/views/suppliers.ejs
@@ -5,7 +5,10 @@
     <title>Halaman Suppliers</title>
   </head>
   <body>
-    <h1>Suppliers</h1>
+    <h1>MENU</h1>
+    <td><a href="/items">Items</td></a>
+    <td><a href="/suppliers">Suppliers</td></a>
+    <h1>Halaman Suppliers</h1>
     <td><a href="/suppliers/add">Add</td></a>
     <table border='1px'>
       <thead>
@@ -13,6 +16,7 @@
           <th>ID</th>
           <th>Name</th>
           <th>Kota</th>
+          <th>Add Item</th>
           <th colspan="2">Action</th>
         </tr>
       </thead>
@@ -22,6 +26,7 @@
             <td><%= row.id %></td>
             <td><%= row.name %></td>
             <td><%= row.kota %></td>
+            <td><a href="/suppliers/assign/<%= row.id %>">Edit</td></a>
             <td><a href="/suppliers/edit/<%= row.id %>">Edit</td></a>
             <td><a href="/suppliers/delete/<%= row.id %>">Delete</td></a>
           </tr>
