--- a/views/items.ejs
+++ b/views/items.ejs
@@ -5,7 +5,13 @@
     <title>Halaman Items</title>
   </head>
   <body>
-    <h1>Items</h1>
+    <h1>MENU</h1>
+    <td><a href="/items">Items</td></a>
+    <td><a href="/suppliers">Suppliers</td></a>
+    <h1>Halaman Items</h1>
+    <% if(dataError){%>
+      <%= dataError%>
+    <% }%>
     <td><a href="/items/add">Add</td></a>
     <table border='1px'>
       <thead>
@@ -14,8 +20,7 @@
           <th>Name</th>
           <th>Brand</th>
           <th>Code Item</th>
-          <th>List Suppliers</th>
-          <th colspan="2">Action</th>
+          <th colspan="3">Action</th>
         </tr>
       </thead>
       <tbody>
@@ -25,7 +30,7 @@
             <td><%= row.name %></td>
             <td><%= row.brand %></td>
             <td><%= row.codeitem %></td>
-            <td><%= supplier_name %></td>
+            <td><%= row.suppliers_name%> </td>
             <td><a href="/items/edit/<%= row.id %>">Edit</td></a>
             <td><a href="/items/delete/<%= row.id %>">Delete</td></a>
           </tr>
