--- a/views/pages/addItem.ejs
+++ b/views/pages/addItem.ejs
@@ -13,10 +13,11 @@
 
 <main>
     <div class="jumbotron">
-        <h1>Add Supplier</h1>
-        <form action="/suplier/addSup" method="POST">
-                <input type="text" name="name" placeholder="Nama suplier">
-                <input type="text" name="kota" placeholder="Nama Kota">
+        <h1>Add Item</h1>
+        <form action="/item/addItem" method="POST">
+                <input type="text" name="name" placeholder="Nama Barang">
+                <input type="text" name="brand" placeholder="Brand">
+                <input type="text" name="codeitem" placeholder="Code Item">
                 <button type="submit">Submit</button>
          </form>
     </div>
