--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,8 @@
 
         <ul class="nav navbar-nav">
             <li><a href="/suplier">Home</a></li>
-            <li><a href="#">Suppliers</a></li>
-            <li><a href="#">Item</a></li>
+            <li><a href="/suplier">Suppliers</a></li>
+            <li><a href="/item">Item</a></li>
             <li><a href="#">Search</a></li>
         </ul>
     </div>
