--- a/views/items/allItems.ejs
+++ b/views/items/allItems.ejs
@@ -10,7 +10,7 @@
     <td><%=item.name%></td>
     <td><%=item.brand%></td>
     <td><%=item.codeitem%></td>
-    <td><a href="/items/edit/<%=item.id%>">edit</a>|<a href="/items/delete/:id">delete</a></td>
+    <td><a href="/items/edit/<%=item.id%>">edit</a>|<a href="/items/delete/<%=item.id%>">delete</a></td>
   </tr>
   <%}%>
 </table>
