--- a/views/supplier.ejs
+++ b/views/supplier.ejs
@@ -14,6 +14,7 @@
           <th>ID</th>
           <th>Nama</th>
           <th>Kota</th>
+          <th>List Item</th>
           <th>Opsi</th>
         </tr>
         <%suppliers.forEach((supplier, i)=>{%>
@@ -22,6 +23,13 @@
             <td><%=supplier.id%></td>
             <td><%=supplier.name%></td>
             <td><%=supplier.kota%></td>
+            <%if(supplier.Items){%>
+              <%supplier.Items.forEach((item, i)=>{%>
+                <td><%=i+1%>. <%=item.name%></td>
+              <%})%>
+            <%}else{%>
+              <td>No item yet</td>
+            <%}%>
             <td>
               <a href="/suppliers/edit/<%=supplier.id%>">edit</a>
               <a href="/suppliers/delete/<%=supplier.id%>">delete</a>
