--- a/views/items.ejs
+++ b/views/items.ejs
@@ -20,8 +20,8 @@
       <td><%= Item[i].name %></td>
       <td><%= Item[i].brand %></td>
       <td><%= Item[i].codeitem %></td>
-      <td><a href="/suppliers/edit/<%= Item[i].id %>">Edit</a></td>
-      <td><a href="/suppliers/delete/<%= Item[i].id %>">Delete</a></td>
+      <td><a href="/items/edit/<%= Item[i].id %>">Edit</a></td>
+      <td><a href="/items/delete/<%= Item[i].id %>">Delete</a></td>
     </tr>
     <% } %>
   </table>
