--- a/views/editItems.ejs
+++ b/views/editItems.ejs
@@ -7,15 +7,18 @@
   <title>Document</title>
 </head>
 <body>
+  <% if(hasOwnProperty(error)){%>
+    <h1>Error</h1>
+  <% } %>
   <form action="/items/edit/<%= Item[0].id %>" method="post">
   Name<br>
   <input type="text" name="name" value="<%= Item[0].name %>">
   <br>
   Brand<br>
-  <input type="text" name="kota" value="<%= Item[0].brand %>">
+  <input type="text" name="brand" value="<%= Item[0].brand %>">
   <br>
   Code Item<br>
-  <input type="text" name="kota" value="<%= Item[0].codeitem %>">
+  <input type="text" name="codeitem" value="<%= Item[0].codeitem %>">
   <br><br>
   <input type="submit" value="Submit">
 </form>
