--- a/views/editSupplier.ejs
+++ b/views/editSupplier.ejs
@@ -4,9 +4,8 @@
     <% include partials/header.ejs %>
   </head>
   <body>
-    <% include partials/menu.ejs %>
     <h2><%= title %></h2>
-    <form action="/suppliers/add" method="post">
+    <form action="/suppliers/edit/<%= dataSupplier.id%>" method="post">
       <table>
         <thead>
           <tr>
@@ -16,8 +15,8 @@
         </thead>
         <tbody>
           <tr>
-            <td><input type="text" name="name" required></td>
-            <td><input type="text" name="kota" required></td>
+            <td><input type="text" name="name" value="<%= dataSupplier.name %>" required></td>
+            <td><input type="text" name="kota" value="<%= dataSupplier.kota %>" required></td>
           </tr>
           <tr>
             <td><input type="submit" value="Submit"> <a href="/suppliers"><button>Cancel</button></a></td>
