--- a/views/form_add_item.ejs
+++ b/views/form_add_item.ejs
@@ -5,6 +5,7 @@
     <title>Add Item</title>
   </head>
   <body>
+    <% include partials/header.ejs %>
     <% if(hasOwnProperty('message'))
     {
       %>
