--- a/views/form_add_supplier.ejs
+++ b/views/form_add_supplier.ejs
@@ -5,6 +5,7 @@
     <title>Add Supplier</title>
   </head>
   <body>
+    <% include partials/header.ejs %>
     <form action="/suppliers/add" method="post">
       Name : <input type="text" name="name" placeholder="Name"><br />
       Kota : <input type="text" name="kota" placeholder="Kota"><br />
