--- a/views/search.ejs
+++ b/views/search.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Search</title>
   </head>
   <body>
     <% include partials/header.ejs %>
