--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,13 @@
   <link rel="stylesheet" href="assets/style/custom.css">
   <title>Index</title>
 </head>
-<body>
+<body style="text-decoration:none;">
+
+
 
   <h1>index</h1>
+  <h1><a href="/suppliers">suppliers</a></h1>
+  <h1><a href="/items">items</a></h1>
 
 
 </body>
