CHECKPOINT 2 - FINAL LIVE CODE W4

--- a/views/suppliers/suppliers.ejs
+++ b/views/suppliers/suppliers.ejs
@@ -49,7 +49,7 @@
                 </br>
                 <% }) %>
                 <% } else { %>
-                  No Item Yet
+                  - No Item Yet -
                 <% } %>
               </td>
               <td>
@@ -91,10 +91,10 @@
             <form class="" action="/suppliers" method="post">
             <div class="modal-body">
               <div class="form-group">
-                <input class="form-control" type="text" name="name" placeholder="Input Nama Supplier" required>
+                <input class="form-control" type="text" name="name" placeholder="Input Nama Supplier">
               </div>
               <div class="form-group">
-                <input class="form-control" type="text" name="kota" placeholder="Input Nama Kota" required>
+                <input class="form-control" type="text" name="kota" placeholder="Input Nama Kota">
               </div>
             </div>
             <div class="modal-footer">
