--- a/views/items/items.ejs
+++ b/views/items/items.ejs
@@ -11,6 +11,12 @@
   </head>
   <body>
     <div class="container">
+      <% if (dataError) { %>
+        <div class="alert alert-danger alert-dismissable">
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+            <strong>Perhatian!</strong> Code Item harus diawali dengan HP | SW | LP dan diikuti’ dengan 4 digit angka
+        </div>
+      <% } %>
       <h2 class="text-center"><strong>TABLE SUPPLIER</strong></h2>
       <div class="text-center">
         <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#addModal">
