--- a/views/itemsAdd.ejs
+++ b/views/itemsAdd.ejs
@@ -38,41 +38,51 @@
       </div><!-- /.container-fluid -->
     </nav>
 
+
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3>List Suppliers</h3>
+          <h3>Add Items</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <table class="table table-bordered table-hover">
-            <thead>
-              <th>No</th>
-              <th>Name</th>
-              <th>Kota</th>
-              <th>Options</th>
-            </thead>
-            <% var i = 1
-              suppliers.forEach(function(item){ %>
-            <tbody>
-              <td><%= i %></td>
-              <td><%= item.name%></td>
-              <td><%= item.kota %></td>
+          <form action="/items/add" method="POST">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Name</label>
+              <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="Name">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Kota</label>
+              <input type="text" name="brand" class="form-control" id="exampleInputEmail1" placeholder="Brand">
+            </div>
 
-              <td>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Kota</label>
+              <input type="text" name="codeitem" class="form-control" id="exampleInputEmail1" placeholder="Kode Item">
+            </div>
 
-                <a href="/suppliers/edit/<%= item.id %>">Edit</a> |
-                <a href="/suppliers/delete/<%= item.id %>" onclick="return confirm('delete this Supplier?')">Delete</a>
-              </td>
-            </tbody>
-            <% i++ }) %>
-          </table>
+            <button type="submit" id="btn-add" class="btn btn-success">Submit</button>
+          </form>
         </div>
+        <%if (err) { %>
+          <div>
+            <br>
+              <!-- <p><%=err%></p> -->
+              <script>
+              function myFunction() {
+                  confirm("<%=err%>");
+              }
+              myFunction()
+              </script>
 
+          </div>
+
+      <%  }%>
+      </div>
       <div class="row">
         <div class="col-md-12">
-          <a href="/suppliers/add" style="margin-top:20px; display:inline-block"> << Add suppliers >></a>
+          <a href="/items" style="margin-top:20px; display:inline-block"> << back to items </a>
         </div>
       </div>
     </div>
