--- a/views/itemsEdit.ejs
+++ b/views/itemsEdit.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title><%= title %></title>
+    <title>Retail Hacktiv8 Pondok Indah</title>
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -23,14 +23,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Sekolah Koding Hacktiv8 Pondok Indah</a>
+          <a class="navbar-brand" href="/">Retail Hacktiv8</a>
         </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/teachers">Teachers</a></li>
-            <li><a href="/subjects">Subjects</a></li>
-            <li><a href="/students">Students</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/suppliers">suppliers</a></li>
+            <li><a href="/items">Items</a></li>
+            <li><a href="/search">Search</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -40,41 +42,47 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3 align = "center"><b>Students Data</b></h3><br>
+          <h3>Edit Items</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <form action="/edit/<%=items[0].id%>" method="POST">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Name</label>
+              <input type="text" name="name" value="<%=items[0].name %>"class="form-control" id="exampleInputEmail1" placeholder="Name">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Brand</label>
+              <input type="text" name="brand" value="<%=items[0].brand %>"class="form-control" id="exampleInputEmail1" placeholder="Brand">
+            </div>
+
+            <div class="form-group">
+              <label for="exampleInputEmail1">Kode Item</label>
+              <input type="text" name="codeitem" value="<%=items[0].codeitem %>"class="form-control" id="exampleInputEmail1" placeholder="Kode Item">
+            </div>
+
+            <button type="submit" id="btn-add" class="btn btn-success">Submit</button>
+          </form>
+        </div>
+        <%if (err) { %>
+          <div>
+            <br>
+              <!-- <p><%=err%></p> -->
+              <script>
+              function myFunction() {
+                  confirm("<%=err%>");
+              }
+              myFunction()
+              </script>
+
           </div>
+
+      <%  }%>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <table class="table table-bordered table-hover">
-            <thead>
-              <th>No</th>
-              <th>Full Name</th>
-              <th>Email</th>
-              <th>Subject</th>
-              <th>Options</th>
-            </thead>
-            <% var i = 1
-              dataStudent.forEach(function(item){ %>
-            <tbody>
-              <td><%= i %></td>
-              <td><%= item.getFullname()%></td>
-              <td><%= item.email %></td>
-              <td><a href="/students/<%=item.id%>/addsubject">Add Subject</a></td>
-              <td>
-                <a href="/students/edit/<%= item.id %>">Edit</a>
-                <a href="/students/delete/<%= item.id %>" onclick="return confirm('delete this student?')">Delete</a>
-              </td>
-            </tbody>
-            <% i++ }) %>
-          </table>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <button type="button" name="button" id="buttonAdd" class="btn btn-success">Add Student</button>
-        </div>
-        <div class="col-md-12">
-          <a href="/" style="margin-top:20px; display:inline-block"> << back to home </a>
+          <a href="/items" style="margin-top:20px; display:inline-block"> << back to items </a>
         </div>
       </div>
     </div>
@@ -83,11 +91,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script>
-      var add = document.getElementById('buttonAdd')
-      add.addEventListener('click', function(){
-        location.href = '/students/add'
-      })
-    </script>
   </body>
 </html>
