--- a/views/suppliersAdd.ejs
+++ b/views/suppliersAdd.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title><%= title %></title>
+    <title>Retail Hacktiv8 Pondok Indah</title>
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -23,41 +23,40 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Clinic Hacktiv8</a>
+          <a class="navbar-brand" href="/">Retail Hacktiv8</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/teachers">Teachers</a></li>
-            <li><a href="/subjects">Subjects</a></li>
-            <li><a href="/students">Students</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/suppliers">suppliers</a></li>
+            <li><a href="/items">Items</a></li>
+            <li><a href="/search">Search</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
 
+
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3>Add Student</h3>
+          <h3>Add Supplier</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <form action="/students/add" method="POST">
+          <form action="/suppliers/add" method="POST">
             <div class="form-group">
-              <label for="exampleInputEmail1">First Name</label>
-              <input type="text" name="first_name" class="form-control" id="exampleInputEmail1" placeholder="Your First Name">
+              <label for="exampleInputEmail1">Name</label>
+              <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="Supplier's Name">
             </div>
             <div class="form-group">
-              <label for="exampleInputEmail1">Last Name</label>
-              <input type="text" name="last_name" class="form-control" id="exampleInputEmail1" placeholder="Your Last Name">
+              <label for="exampleInputEmail1">Kota</label>
+              <input type="text" name="kota" class="form-control" id="exampleInputEmail1" placeholder="Name Kota">
             </div>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email</label>
-              <input type="text" name="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-            </div>
+
             <button type="submit" id="btn-add" class="btn btn-success">Submit</button>
           </form>
         </div>
@@ -78,7 +77,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <a href="/students" style="margin-top:20px; display:inline-block"> << back to student </a>
+          <a href="/suppliers" style="margin-top:20px; display:inline-block"> << back to suppliers </a>
         </div>
       </div>
     </div>
